--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    "strictPropertyInitialization": false // Agregamos esta propiedad recomendada porque no permite propiedades de una clase sin incializar. 
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
